@@ -3,6 +3,7 @@ libcm4all-was (0.8) unstable; urgency=low
   * apreq: use libapreq2 forward-declarations
   * xios: reduce libcore header dependencies
   * simple: fix memory leak
+  * simple: check for control commands before reading
 
  --   
 
